<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projetbal.PretRenduBookActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_isbn"
        android:orderInCategory="100"
        android:title="@string/isbn"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_commentaire"
        android:orderInCategory="100"
        android:title="@string/commentaires"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_eleveid"
        android:orderInCategory="100"
        android:title="@string/id_de_l_l_ve"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_user"
        android:orderInCategory="100"
        android:title="@string/identifiant"
        app:showAsAction="never" />
</menu>