<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/scan_cd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/scan" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/isbnScan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/isbn"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/searchIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="searchBooks"
        android:text="@string/rechercher" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="44dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/titre" />

            <EditText
                android:id="@+id/edit_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/titre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/code_barre" />

            <EditText
                android:id="@+id/edit_cd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/code_barre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="243dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/matiere" />

            <Spinner
                android:id="@+id/matiere"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/matiere" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:text="@string/editeur" />

            <EditText
                android:id="@+id/editeur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/editeur"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/informations_du_livre" />

            <EditText
                android:id="@+id/edit_descrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/informations_du_livre" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="246dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/annee" />

            <Spinner
                android:id="@+id/annee"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/annee" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/et"
                android:layout_width="245dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/etat_du_livre" />

            <Spinner
                android:id="@+id/etatLivre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/etat_livre" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="49dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/commentaires" />

            <EditText
                android:id="@+id/commentaire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/commentaires"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/button_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addBook"
            android:text="@string/ajout_du_livre" />

    </LinearLayout>

</LinearLayout>