<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#4CAF50"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="212dp" />

    <EditText
        android:id="@+id/userMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nom_d_utilisateur" />

    <Button
        android:id="@+id/connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="connectWithUser"
        android:text="@string/connexion" />

    <Button
        android:id="@+id/scanQRConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="connectWithQRCode"
        android:text="@string/scanner_qr_code_de_connexion" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="id"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/searchId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchLivreWithId"
            android:text="Recup" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="129dp" />

    <Button
        android:id="@+id/newBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newBookActivity"
        android:text="@string/cr_ation_de_nouveaux_livres" />


</LinearLayout>